--- a/index.html
+++ b/index.html
@@ -30,14 +30,10 @@
 
             <div class="page-header-wrp-btn-right">
                 <nav class="menu-btn">
-                    <!-- <input type="checkbox" id="switch-menu">
-                    <label class="menu-btn-label" for="switch-menu"> -->
-                    <svg width="32" height="23" viewBox="0 0 32 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 23V20.31H32V23H0ZM0 12.76V10.07H32V12.76H0ZM0 2.69V0H32V2.69H0Z" fill="#E8E8E8" />
-                    </svg>
-
+                    <input type="checkbox" id="ch">
+                    <label class="menu-btn-label" for="ch">
+                        <span class="menu-btn-span"></span>
                     </label>
-
                     <!-- <ul class="menu-list">
                         <li class="menu-list-item">
                             <a href="#">man</a>
@@ -313,7 +309,7 @@
             </section>
 
             <!-- FEATURES -->
-            <section class="features">
+            <section class="features">2
                 <div class="features-item">
                     <div class="feautures-item-icon-wrp">
                         <img src="img/bi-1.svg" alt="logo">
